Adding Folders for future classes and orgnizing the project files

--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
