--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MentoriaConnection": "Data Source=.\\SQLite\\Mentoria.sqlite"
   }
 }
