--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\WeatherForecastController.cs" />
+    <Compile Remove="ViewModels\CustomerViewModel.cs" />
     <Compile Remove="WeatherForecast.cs" />
   </ItemGroup>
 
