--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /src/API/SQLite/Mentoria.sqlite
+/src/API/SQLite/Mentoria.sqlite-wal
+/src/API/SQLite/Mentoria.sqlite-shm
